# RS-Autopilot

./: .gitignore  LICENSE  README.md  city_names.txt  cli.py  pyproject.toml  requirements.txt  start.bat  start_console.bat  start_hidden.vbs  status.bat  stop.bat  update.bat  version.py
config/: app.example.json  config.example.json
docs/: add-station-guide.md  ai-agent-setup.md  architecture.md  edit-history.md
resonance/: __init__.py
resonance/debug/: snapshot.py
resonance/device/: adb.py  base.py  device.py  droidcast.py  nemu.py  port_scanner.py  scrcpy.py
resonance/model/: __init__.py  city_data.py  city_goods.py  config.py  goods.py  runtime.py
resonance/preset/: __init__.py  control.py  presets.py
resonance/scene/: graph.py  recognizer.py  scene.py  waiting.py
resonance/scheduler/: __init__.py  models.py  scheduler.py
resonance/server/: __init__.py  app.py  websocket.py  ws_state.py
resonance/solver/: base.py  graph.py
resonance/solvers/: boot.py  buy.py  city.py  exchange.py  navigation.py  recovery.py  sell.py  strength.py  trade.py
resonance/utils/: download_utils.py  exception_handling.py  exceptions.py  file_watcher.py  logger.py  queue.py  screenshot_logger.py  utils.py  wsdata.py
resonance/vision/: color.py  image.py  mask.py  ocr.py  utils.py
resources/goods/: AttachedToCityData.json  CityData.json  CityGoodsData.json  CityGoodsSellData.json  CityPosData.json  CityTiredData.json
resources/stations/: name2id.json
tests/: test_trade_stop_action.py
web/: README.md  index.html  package-lock.json  package.json
(+42 files in other folders)
